# delta

./: CMakeLists.txt
include/delta/: fp32.h
source/: fp32.c  main.c
